--- a/engine/engine.vcxproj.filters
+++ b/engine/engine.vcxproj.filters
@@ -285,6 +285,9 @@
     <ClInclude Include="render\Graphics\DXBuffers\SimpleBuffer.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="render\Graphics\PostProcess\BloomRessolver.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="render\D3D\d3d.cpp">
@@ -434,6 +437,9 @@
     <ClCompile Include="source\remover\MeshRemover.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="render\Graphics\PostProcess\BloomRessolver.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="render\Graphics\shaders\normal\VSBasicColor.hlsl">
@@ -541,6 +547,9 @@
     <FxCompile Include="render\Graphics\shaders\gpuparticles\PSGPUParticles.hlsl" />
     <FxCompile Include="render\Graphics\shaders\gpuparticles\VSGPUParticleLighting.hlsl" />
     <FxCompile Include="render\Graphics\shaders\gpuparticles\PSGPUParticleLighting.hlsl" />
+    <FxCompile Include="render\Graphics\shaders\bloom\VSBloom.hlsl" />
+    <FxCompile Include="render\Graphics\shaders\bloom\PSBloomUP.hlsl" />
+    <FxCompile Include="render\Graphics\shaders\bloom\PSBloomDOWN.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <None Include="render\Graphics\shaders\normal\BasicColorStructs.hlsli">
